[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/characters/cannon/cannon_setup.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/megaship/shoot.wav" type="AudioStream" id=2]
[ext_resource path="res://src/library/random_pitch_audio_stream_player_2D.gd" type="Script" id=3]

[node name="CannonSetup" type="Node2D"]
script = ExtResource( 1 )

[node name="SndShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
script = ExtResource( 3 )
randomness_interval = Vector2( 0.98, 1.02 )

[node name="SndCharge" type="AudioStreamPlayer2D" parent="."]
